[package]
name = "packet-gen-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
oxc_allocator = "0.139"
oxc_ast = "0.139"
oxc_parser = "0.139"
oxc_span = "0.139"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
