[package]
name = "packet-gen-wasm"
description = "WASM module for Vape Rewrite that supplies data for creating dummy enums/messages"
repository = "https://github.com/MinibloxCheaters2/packet-gen-wasm/"
license = "AGPL-3.0-only"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.103"
oxc_allocator = "0.140"
oxc_ast = "0.140"
oxc_parser = "0.140"
oxc_span = "0.140"
wasm-bindgen = "0.2"

[profile.release]
lto = true
